--- a/main.html
+++ b/main.html
@@ -16,7 +16,11 @@
     <h2>Число умноженное на 4: <span class="out3"></span></h2>
     <h2>Число умноженное на 5: <span class="out4"></span></h2>
     <h2>Число умноженное на 6: <span class="out5"></span></h2>
+    <div>Балуюсь с ГИТ</div>
 
+    <div>ffffffffffffff</div>
+    <p>dddddddddddd</p>
+    <button></button>
     <script src="script.js"></script>
   </body>
 </html>
